[package]
name = "daqbuffer"
version = "0.0.2"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.22", features = ["rt-core", "rt-threaded", "blocking", "fs", "net", "tcp", "dns", "time", "macros"] }
tracing = "0.1.19"
tracing-subscriber = "0.2.12"
async-channel = "1.4.2"
bytes = "0.5.6"
parking_lot = "0.11.0"
dashmap = "3.11.10"
snafu = "0.6.9"
tokio-postgres = { version = "0.5.5", features = ["with-serde_json-1"] }
clap = "3.0.0-beta.2"
regex = "1.3.9"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
parsersdaq = { path="../parser" }
chrono = { version = "0.4.19", features = ["serde"] }
http = "0.2.1"
hyper = "0.13.8"
tera = { version = "1.5.0", default-features = false }

[profile.release]
opt-level = 1
lto = "thin"
debug = 0
incremental = true
